# MPP

./: CNAME  LICENSE  README.md  build_exe.py  index.html  mpp.cmd  mpp.spec  mpp_launch.py  package.json  pyproject.toml  requirements.txt  run.py
apps/: APP_FORMAT.md
apps/editor_app/: app.json  app.mpp
apps/editor_app/ui/: app.js  index.html  style.css
apps/terminal_ui_cpp_host/: BUILD_WINDOWS.md  CMakeLists.txt  README.md  main.cpp
apps/terminal_ui_cpp_host/web/: app.js  index.html  style.css
apps/terminal_ui_window/: README.md  main.py
apps/terminal_ui_window/web/: index.html  style.css
assets/: README.md
cpp/: CMakeLists.txt  README.md  ast.hpp  build.bat  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  value.cpp  value.hpp
docs/: index.html
examples/: functions.mpp  hello.mpp  lowlevel.mpp  terminal_ui.mpp
installer/: README.md  mpp.iss  prepare_payload.ps1
installer/payload/: SPEC.md
installer/payload/apps/terminal_ui_window/web/: app.js
installer/payload/examples/: classes.mpp  fibonacci.mpp
mpp/: __init__.py  __main__.py  ast.py  interpreter.py  lexer.py  parser.py
mpp_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/cases/: arith.mpp  arith.out  arrays_loops.mpp  arrays_loops.out  basic.mpp  builtins_presence.mpp  builtins_presence.out  functions_recursion.mpp  functions_recursion.out  mem_api.mpp  mem_api.out  strings_objects.mpp  strings_objects.out
tools/: make_ico.py  run_tests.js  run_tests.py  svg_to_ico.py
website/: download.html  index.html  script.js  style.css
