[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpp-lang"
version = "1.0.0"
description = "M++ — The Ultimate Computer Language"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
mpp = "mpp.__main__:main"

[tool.setuptools]
packages = ["mpp"]
